# bkmonitor-ecosystem

./: .code.yml  .gitignore  .gtmproject.yaml  .pre-commit-config.yaml  Makefile  README.md  lint-md-precommit.sh  pyproject.toml
.github/: copilot-instructions.md
docs/: CONTRIBUTING.md
docs/open/: README.md
docs/open/common/examples/: helloworld.md
docs/open/cookbook/Term/metrics/: type.md  what.md
docs/open/cpp/otlp/: README.md
docs/open/cpp/quickstart/: README.md
docs/open/go/jaeger-client-demo/: README.md
docs/open/go/jaeger-ot-demo/: README.md
docs/open/go/otlp/: README.md
docs/open/go/profiling/: README.md
docs/open/go/quickstart/: README.md
docs/open/go/trpc-otlp-oteam-open/: README.md
docs/open/java/otlp/: README.md
docs/open/java/otlp-spring-boot-starter/: README.md
docs/open/java/profiling/: README.md
docs/open/java/quickstart/: README.md
docs/open/java/skywalking-agent/: README.md
docs/open/js/otlp/: README.md
docs/open/js/quickstart/: README.md
docs/open/python/blueapps/: README.md  blueapps 4.x 接入指引.md  blueapps 5.x 接入指引.md
docs/open/python/jaeger-ot-demo/: README.md
docs/open/python/otlp/: README.md
docs/open/python/otlp-automatic/: README.md
docs/open/python/patch-profiling/: README.md
docs/open/python/profiling/: README.md
docs/open/python/quickstart/: README.md
examples/common/ob-all-in-one/: README.md  docker-compose.yaml  otel-collector.yaml  tempo.yml
examples/cpp-examples/helloworld/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
examples/cpp-examples/helloworld/include/: client.h  config.h  server.h
examples/cpp-examples/helloworld/include/otlp/: logger_common.h  meter_common.h  resource_common.h  tracer_common.h
examples/cpp-examples/helloworld/src/: client.cpp  main.cpp  server.cpp
examples/events/cpp/: CMakeLists.txt  Dockerfile  main.cpp
examples/events/curl/: report_event.sh
examples/events/go/: Dockerfile  go.mod  main.go
examples/events/java/: Dockerfile
examples/events/python/: Dockerfile
examples/events/python/src/: main.py
examples/go-examples/helloworld/: Dockerfile  go.mod  go.sum  main.go
examples/go-examples/helloworld/config/: config.go
examples/go-examples/helloworld/define/: otlp.go  request.go
examples/go-examples/helloworld/service/: service.go
examples/go-examples/jaeger-client-demo/: Dockerfile  go.mod  main.go
examples/go-examples/jaeger-client-demo/config/: config.go
examples/go-examples/jaeger-client-demo/service/: helloworld.go  querier.go  service.go
examples/go-examples/jaeger-ot-demo/: Dockerfile  go.mod  go.sum  main.go
examples/go-examples/jaeger-ot-demo/config/: config.go
examples/go-examples/jaeger-ot-demo/service/: helloworld.go  otlp.go  querier.go  service.go
examples/go-examples/taf-demo/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SayHello_imp.go  k8s.yaml  main.go  property.go  start.sh
examples/go-examples/taf-demo/config/: config.conf
examples/go-examples/trpc-otlp-oteam-open/: .dockerignore  .gitignore  Dockerfile  Makefile  go.mod  go.sum  greeter.go  http_code.go  main.go
examples/go-examples/trpc-otlp-oteam-open/conf/: trpc_go.yaml
examples/go-examples/trpc-otlp-oteam-open/greeter/: greeter.proto
examples/java-examples/helloworld/: Dockerfile  build.gradle
examples/java-examples/metric/: Dockerfile  build.gradle  settings.gradle
examples/java-examples/skywalking-agent/: .dockerignore  .gitattributes  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
examples/java-examples/spring-boot-starter/: Dockerfile  build.gradle.kts
examples/js-examples/helloworld/: Dockerfile  Makefile  app.js  k8s.yaml  package-lock.json  package.json
examples/js-examples/helloworld/src/: client.js  config.js  otlp.js  server.js
examples/metrics/http/cpp/: CMakeLists.txt  Dockerfile  main.cpp
examples/metrics/http/curl/: report_metrics.sh
examples/metrics/http/go/: Dockerfile  go.mod  main.go
examples/metrics/http/java/: Dockerfile  build.gradle
examples/metrics/http/python/: Dockerfile  requirements.txt
examples/metrics/sdks/cpp/: CMakeLists.txt  Dockerfile  main.cpp
examples/metrics/sdks/go/: Dockerfile  go.mod  main.go
examples/metrics/sdks/java/: Dockerfile  build.gradle
examples/metrics/sdks/python/: Dockerfile
examples/python-examples/helloworld/: Dockerfile  pyproject.toml  requirements.txt
examples/python-examples/helloworld-automatic/: Dockerfile  requirements.txt
examples/python-examples/helloworld-automatic/src/: config.py  main.py
examples/python-examples/helloworld/src/: config.py  main.py
examples/python-examples/jaeger-ot-demo/: Dockerfile  requirements.txt
examples/python-examples/jaeger-ot-demo/src/: config.py  jaeger_tracer.py  main.py
examples/python-examples/patch-profiling/: Dockerfile  pyproject.toml  requirements.txt
examples/python-examples/patch-profiling/src/: config.py  main.py  patch.py
examples/python-examples/profiling/: pyproject.toml  requirements.txt
examples/python-examples/profiling/src/: config.py  main.py
templates/common/examples/: helloworld.md
templates/cookbook/Term/metrics/: type.md  what.md
templates/cpp/otlp/: README.md
templates/go/jaeger-client-demo/: README.md
templates/go/jaeger-ot-demo/: README.md
templates/go/otlp/: README.md
templates/go/profiling/: README.md
templates/go/trpc-otlp-oteam-open/: README.md
templates/java/otlp/: README.md
templates/java/otlp-spring-boot-starter/: README.md
templates/java/profiling/: README.md
templates/java/skywalking-agent/: README.md
templates/js/otlp/: README.md
templates/python/blueapps/: README.md  blueapps 4.x 接入指引.md  blueapps 5.x 接入指引.md
templates/python/jaeger-ot-demo/: README.md
templates/python/otlp/: README.md
templates/python/otlp-automatic/: README.md
templates/python/patch-profiling/: README.md
templates/python/profiling/: README.md  README.md.old
tools/formatter/: __init__.py  main.py
tools/formatter/context/: __init__.py  base.py  open.py
tools/scripts/pre-commit/: insert_license_header.py  pre_check.py  pre_check.sh
(+107 files in other folders)
